--- a/htmltest.html
+++ b/htmltest.html
@@ -49,7 +49,7 @@
 				buttonId: '5738B0000004C9D',
 				baseLiveAgentURL: 'https://d.la5-c1cs-ia4.salesforceliveagent.com/chat',
 				eswLiveAgentDevName: 'Chat_Team',
-				isOfflineSupportEnabled: true
+				isOfflineSupportEnabled: false
 			}
 		);
 	};
