--- a/htmltest.html
+++ b/htmltest.html
@@ -43,7 +43,7 @@
 				  "entityName": "Case",
 				  "entityFieldMaps": [{
 				    "isExactMatch": false,
-				    "fieldName": "WebEmail",
+				    "fieldName": "SuppliedEmail",
 				    "doCreate": true,
 				    "doFind": false,
 				    "label": "Email"
