--- a/htmltest.html
+++ b/htmltest.html
@@ -47,6 +47,12 @@
 				    "doCreate": true,
 				    "doFind": false,
 				    "label": "Email"
+			  	},{
+				    "isExactMatch": false,
+				    "fieldName": "SuppliedName",
+				    "doCreate": true,
+				    "doFind": false,
+				    "label": "First Name"
 			  	}]}];
 				embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 				embedded_svc.settings.entryFeature = 'LiveAgent';
