--- a/htmltest.html
+++ b/htmltest.html
@@ -17,9 +17,9 @@
 			var initESW = function(gslbBaseURL) {
 				embedded_svc.settings.displayHelpButton = true; //Or false
 				embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
-
 				//Only match Contacts on Email
 				embedded_svc.settings.extraPrechatInfo = [{
+				  "entityName":"Contact",
 				  "entityFieldMaps": [{
 				    "doCreate":false,
 				    "doFind":false,
@@ -38,28 +38,24 @@
 				    "fieldName":"Email",
 				    "isExactMatch":true,
 				    "label":"Email"
-				  }],
-				  "entityName":"Contact"
-				}];
-
-				//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
-				//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
-
-				//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
-				//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
-
-				// Settings for Chat
-				//embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
-					// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
-					// Returns a valid button ID.
-				//};
-				//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
-				//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
-				//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
-
+				  }]
+				}, {
+				  "entityName": "Case",
+				  "entityFieldMaps": [{
+				    "isExactMatch": false,
+				    "fieldName": "SuppliedEmail",
+				    "doCreate": true,
+				    "doFind": false,
+				    "label": "Email"
+			  	},{
+				    "isExactMatch": false,
+				    "fieldName": "SuppliedName",
+				    "doCreate": true,
+				    "doFind": false,
+				    "label": "Name"
+			  	}]}];
 				embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 				embedded_svc.settings.entryFeature = 'LiveAgent';
-
 				embedded_svc.init(
 					'https://blueacorncorp--staging.my.salesforce.com',
 					'https://staging-blueacorn.cs215.force.com',
@@ -76,7 +72,6 @@
 					}
 				);
 			};
-
 			if (!window.embedded_svc) {
 				var s = document.createElement('script');
 				s.setAttribute('src', 'https://blueacorncorp--staging.my.salesforce.com/embeddedservice/5.0/esw.min.js');
