--- a/htmltest.html
+++ b/htmltest.html
@@ -18,45 +18,61 @@
 				embedded_svc.settings.displayHelpButton = true; //Or false
 				embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
 
-				//Only match Contacts on Email
-				embedded_svc.settings.extraPrechatInfo = [{
-				  "entityFieldMaps": [{
-				    "doCreate":false,
-				    "doFind":false,
-				    "fieldName":"LastName",
-				    "isExactMatch":true,
-				    "label":"Last Name"
-				  }, {
-				    "doCreate":false,
-				    "doFind":false,
-				    "fieldName":"FirstName",
-				    "isExactMatch":true,
-				    "label":"First Name"
-				  }, {
-				    "doCreate":false,
-				    "doFind":true,
-				    "fieldName":"Email",
-				    "isExactMatch":true,
-				    "label":"Email"
-				  }],
-				  "entityName":"Contact"
-				}];
-
-				//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
-				//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
-
-				//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
-				//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
-
-				// Settings for Chat
-				//embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
-					// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
-					// Returns a valid button ID.
-				//};
-				//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
-				//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
-				//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
-
+				//Only match Contacts on Email and map entered name and email onto Case
+				embedded_svc.settings.extraPrechatInfo=[
+				   {
+				      "entityName":"Contact",
+				      "entityFieldMaps":[
+					 {
+					    "doCreate":false,
+					    "doFind":false,
+					    "fieldName":"LastName",
+					    "isExactMatch":true,
+					    "label":"Last Name"
+					 },
+					 {
+					    "doCreate":false,
+					    "doFind":false,
+					    "fieldName":"FirstName",
+					    "isExactMatch":true,
+					    "label":"First Name"
+					 },
+					 {
+					    "doCreate":false,
+					    "doFind":true,
+					    "fieldName":"Email",
+					    "isExactMatch":true,
+					    "label":"Email"
+					 }
+				      ]
+				   },
+				   {
+				      "entityName":"Case",
+				      "entityFieldMaps":[
+					 {
+					    "isExactMatch":false,
+					    "fieldName":"SuppliedEmail",
+					    "doCreate":true,
+					    "doFind":false,
+					    "label":"Email"
+					 },
+					 {
+					    "isExactMatch":false,
+					    "fieldName":"WebFirstName__c",
+					    "doCreate":true,
+					    "doFind":false,
+					    "label":"First Name"
+					 },
+					 {
+					    "isExactMatch":false,
+					    "fieldName":"WebLastName__c",
+					    "doCreate":true,
+					    "doFind":false,
+					    "label":"Last Name"
+					 }
+				      ]
+				   }
+				];
 				embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 				embedded_svc.settings.entryFeature = 'LiveAgent';
 
